# kosmos-research

R&D/: KOSMOS_GAP_ANALYSIS_AND_INTEGRATION_PLAN.md
R&D/examples/: README.md
R&D/examples/01_context_compression/: compression_demo.py
R&D/examples/02_task_planning/: task_planning_demo.py
R&D/examples/03_hybrid_state_manager/: hybrid_state_demo.py
R&D/examples/04_end_to_end/: README.md  research_workflow_demo.py
R&D/kosmos/: .dockerignore  CHANGELOG.md  Dockerfile  INTEGRATION_PHASE1_COMPLETE.md  INTEGRATION_PHASE2_COMPLETE.md  Makefile  PROJECT_COMPLETE.md  alembic.ini  docker-compose.yml  human_review_audit.jsonl  kosmos.db  pyproject.toml  pytest.ini
R&D/kosmos-agentic-data-scientist/: README.md
R&D/kosmos-karpathy/: LICENSE  pyproject.toml  start.py
R&D/kosmos-karpathy/karpathy/: .env.example  __init__.py  agent.py  utils.py
R&D/kosmos/alembic/: env.py
R&D/kosmos/alembic/versions/: 2ec489a3eb6b_initial_schema.py  fb9e61f33cbf_add_performance_indexes.py
R&D/kosmos/archived/bug-fixes-2025-11-19/: ARCHIVE_SUMMARY.md  BUG_FIX_COMPLETED_2025_11_19.md  BUG_FIX_PLAN_2025_11_19.md
R&D/kosmos/archived/checkpoints/: COMPACTION_QUICK_REFERENCE.md  PHASE_10_CHECKPOINT_2025-11-10.md  PHASE_10_WEEK_1_CHECKPOINT_2025-11-10.md  (+12 more)
R&D/kosmos/k8s/: configmap.yaml  hpa.yaml  ingress.yaml  kosmos-deployment.yaml  kosmos-service.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml.template
R&D/kosmos/scripts/: setup_docker_wsl2.sh  setup_environment.sh  setup_neo4j.sh  verify_deployment.sh
R&D/kosmos/tests/: conftest.py
(+166 files in other folders)
